--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.2.3
   http: ^1.1.0
+  flutter_map: ^6.1.0
+  mapbox_gl: ^0.16.0
+  map: ^1.4.2
+
 
 dev_dependencies:
   flutter_test:
