--- a/firebase.json
+++ b/firebase.json
@@ -1,10 +1,10 @@
 {
   "hosting": {
-    "public": "web",
+    "public": "build/web",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
     ]
-  }
+}
 }
