--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,8 +77,7 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
-    - assets/i18n/en.json
-    - assets/i18n/de.json
+    - assets/i18n/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
